--- a/SwiftUI/Team/Info.plist
+++ b/SwiftUI/Team/Info.plist
@@ -62,6 +62,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera for taking picture of donated food</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Album for pictures of donated food</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
